# frieda

./: .gitignore  Cargo.toml  README.md  blob  not_weird  ordered  rust-toolchain.toml  weird
.github/workflows/: benchmark.yml  coverage.yml  rust.yml
benches/: commit.rs  field_and_poly.rs  fri.rs  lib.rs  proof.rs
src/: commit.rs  da.rs  field.rs  fri.rs  lib.rs  main.rs  polynomial.rs  proof.rs  reconstruct.rs  sampling.rs  utils.rs
