[package]
name = "frieda"
version = "0.1.0"
edition = "2021"
description = "FRI-based Data Availability sampling library based on the FRIDA paper"
license = "MIT"
repository = "https://github.com/AbdelStark/frieda"
keywords = ["cryptography", "data-availability", "fri", "erasure-coding"]
categories = ["cryptography", "algorithms", "no-std"]

[dependencies]
stwo-prover = { git = "https://github.com/starkware-libs/stwo", rev = "19d12d7", default-features = false }
bitvec = "1.0.1"
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.9.0"
rayon = "1.10.0"

[[bench]]
name = "commit"
harness = false
path = "benches/commit.rs"

[[bench]]
name = "proof"
harness = false
path = "benches/proof.rs"

[features]
default = ["std"]
std = []
