[package]
name = "frieda"
version = "0.1.0"
edition = "2021"
description = "FRI-based Data Availability sampling library based on the FRIDA paper"
license = "MIT"
repository = "https://github.com/AbdelStark/frieda"
keywords = ["cryptography", "data-availability", "fri", "erasure-coding"]
categories = ["cryptography", "algorithms", "no-std"]

[dependencies]
stwo-prover = { git = "https://github.com/starkware-libs/stwo", branch = "dev", features = [
    "rayon",
] }
bitvec = "1.0.1"
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "commit"
harness = false
path = "benches/commit.rs"

[[bench]]
name = "proof"
harness = false
path = "benches/proof.rs"
